Spindash added - no dust fx or proper rev sfx

--- a/SonLVL INI Files/obj.ini
+++ b/SonLVL INI Files/obj.ini
@@ -25,6 +25,8 @@ art=../artunc/Giant Ring.bin
 artcmp=Uncompressed
 mapasm=../_maps/Giant Ring.asm
 pal=1
+[4F]
+name=Cannon
 [54]
 xmlfile=Common/Invisible lava marker.xml
 [71]
